--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ html, body {
 	width: 100%;
 }
 
-.button {
+#mc_embed_signup_scroll {
 	display: flex;
 	text-align: center;
 	justify-content: center;
