--- a/style.css
+++ b/style.css
@@ -17,6 +17,11 @@ html, body {
 	width: 100%;
 }
 
+#mc_embed_signup_scroll {
+	display: flex;
+	justify-content: center;
+}
+
 .button {
 	width: 100%;
 	display: flex;
