--- a/style.css
+++ b/style.css
@@ -17,12 +17,7 @@ html, body {
 	width: 100%;
 }
 
-#mc_embed_signup_scroll {
-	display: flex;
-	justify-content: center;
-}
-
-.button {
+.button_1 {
 	width: 100%;
 	display: flex;
 	text-align: center;
